--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>vue-app-mfw</title>
+    <!-- <link rel="icon" href="<%= BASE_URL %>favicon.ico"> -->
+    <title>马蜂窝,自由行!旅游攻略,自助游,自驾游攻略社区 - 马蜂窝</title>
+    <link rel="icon" type="image/x-icon" href="/img/icon.png"/>
   </head>
   <body>
     <noscript>
